--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class ="col-md-3 offset-md-4 text-center">
-      <h2>Forgot your password?</h2>
+      <h2 class="title">Forgot your password?</h2>
     </div>
   </div>
   <div class="row">
