--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+  <div class="notice"><%= flash.notice %>
+  </div>
 
   <div class="row">
     <div class="col-md-10 offset-md-1" >
@@ -11,7 +13,6 @@
             </div>
           </div>
         </div>
-
         <div class="row">
           <div class="col-md">
             <h3><%= @post.title %></h3>
@@ -19,14 +20,12 @@
             <%= image_tag @post.post_image.thumb.url.to_s, width: "100%" %>
           </div>
         </div>
-
         <div class="row">
           <div class="col-md">
             <a href="<%= @post.portfolio_url %>"><%= @post.portfolio_url %>
             </a>
           </div>
         </div>
-
         <div class="row">
           <div class="col-md-2 text-right">
             <%= link_to user_path(@post.user) do %>
@@ -45,9 +44,9 @@
           </div>
           <div class="col-md-3 content">
             <h5>
-            <i class="fas fa-comment-dots fa-lg"></i>
-            <%= @post.post_comments.count %>
-          </h5>
+              <i class="fas fa-comment-dots fa-lg"></i>
+              <%= @post.post_comments.count %>
+            </h5>
           </div>
         </div>
         <div class="row">
@@ -77,6 +76,7 @@
             </p>
           </div>
         </div>
+
         <% if @post.user == current_user %>
           <div class="row">
             <div class="col-md text-center">
@@ -87,30 +87,30 @@
         <% end %>
       </div>
 
-    <div class="post-comment">
-      <div class="row">
-        <div class="col-md">
-          <h3 class="title"><strong>コメント/質問/返信</strong></h3>
+      <div class="post-comment">
+        <div class="row">
+          <div class="col-md">
+            <h3 class="title"><strong>コメント/質問/返信</strong></h3>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md">
-            <div class="row">
-              <div class="col-md-8">
-                <% if user_signed_in? %>
-                  <%= render partial: 'post_comments/form', locals: { post_comment: @post_comment, post: @post } %>
-                <% end %>
+        <div class="row">
+          <div class="col-md">
+              <div class="row">
+                <div class="col-md-8">
+                  <% if user_signed_in? %>
+                    <%= render partial: 'post_comments/form', locals: { post_comment: @post_comment, post: @post } %>
+                  <% end %>
+                </div>
               </div>
+            <div class="post_comments_area">
+              <%= render partial: 'post_comments/index', locals: { post_comments: @post_comments} %>
             </div>
-          <div class="post_comments_area">
-            <%= render partial: 'post_comments/index', locals: { post_comments: @post_comments} %>
           </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
-</div>
 
 </div>
 
