--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+  <div class="notice"><%= flash.notice %></div>
+  <div class="alert"><%= flash.alert %></div>
 
   <div class="row">
     <div class="col-md text-center">
