--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class = "row">
     <div class ="col-md-6 offset-md-3 text-center">
-      <h2>新規登録</h2>
+      <h2 class="title">新規登録</h2>
     </div>
   </div>
 
