--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+  <div class="notice"><%= flash.notice %>
+  </div>
   <div class="row">
 
     <div class ="col-md-2">
