[add]omniauth-google

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,7 +10,7 @@
       <div class="main-visual-headline">
         <h2>ポートフォリオを<br>
           作成したい・作成した なら<br>
-          <strong>E.G.C.</strong>で繋がろう！</h2>
+          <strong>E.G.C.</strong> で繋がろう！</h2>
       </div>
       <div class="main-centense">
         <p>
@@ -21,12 +21,14 @@
         </p>
 
         <% unless user_signed_in? %>
-          <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "btn btn-info btn-lg" %><br>
-          <%= link_to '新規登録(無料)', new_user_registration_path, class: "btn btn-outline-danger btn-lg" %>
-          <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-lg" %>
+          <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "btn btn-outline-info btn-lg" %><br>
+          <%= link_to '新規登録', new_user_registration_path, class: "btn btn-outline-danger btn-lg" %>
+          <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-lg" %><br>
+          <%= link_to user_google_omniauth_authorize_path, class: "btn btn-outline-warning btn-lg" do %>
+            <i class="fab fa-google fa-fw"></i>認証
+          <% end %>
           <p><small>※ ログインしていない場合は、[<i class="fas fa-home"></i> About 作品一覧]のみご利用が可能です</small></p>
         <% end %>
-        <%= link_to 'とりあえず作品を見てみる', posts_path, class: "btn btn-outline-info btn-lg" %>
       </div>
     </div>
   </div>
