--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -19,7 +19,8 @@
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
+  <p>or</p>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%= link_to "#{OmniAuth::Utils.camelize(provider)}認証", omniauth_authorize_path(resource_name, provider),class: "btn btn-warning btn-block" %><br />
   <% end %>
 <% end %>
