[Fix]view:footer,about

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -30,48 +30,50 @@
 }
 
 .about-main-title {
-	padding-top: 4%;
-	padding-bottom: 4%;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 }
 
 .about-title {
 	color: #1ed7f5;
-	margin-top: 15%;
-	margin-bottom: 5%;
+	margin-top: 15px;
+	margin-bottom: 5px;
 	text-align: center;
 }
 
 .about-title-body {
-	padding-bottom: 5%;
+	padding-bottom: 5px;
 	text-align: center;
 }
 
 .about-origin-title {
-	padding-bottom: 2%;
+	padding-bottom: 5px;
 	text-align: center;
 }
 
 .about-origin {
 	color: #ffd900;
-	margin-bottom: 2%;
+	margin-bottom: 5px;
 	text-align: center;
 }
 
 .about-subtitle {
 	color: #1ed7f5;
-	padding-bottom: 2%;
+	padding-bottom: 10px;
 	text-align: center;
 }
 
 .about-centence {
-	padding: 2%;
-	margin: 3%;
+	padding: 5px;
+	margin: 10px;
 	text-align: center;
 }
 
 .about-body {
 	text-align: center;
 }
+
+
 
 
