--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -7,13 +7,13 @@
     <div class="about-title-body">
       <p>E.G.C. は、開発エンジニアの卵が「楽しみながら成長していくこと」を応援するサイトです。<br>
         ポートフォリオの紹介、コメントで投稿者と閲覧者の交流ができます。<br>
-        インスピレーションや技術向上 等、「成長」「ポートフォリオの紹介」としてご活用ください。
+        インスピレーションや技術向上 等、「成長」「ポートフォリオの紹介」の場としてご活用ください。
       </p>
     </div>
     <div class="row">
       <div class="col-md-10 offset-md-1">
         <div class="about-origin-title">
-          <h4><strong>サイト名の由来[頭文字]</strong></h4>
+          <h3>サイト名の由来[頭文字]</h4>
         </div>
         <div class="about-body">
           <div class="row">
@@ -39,13 +39,13 @@
                 <p>E G.C.を通じて成長しましょう！！</p>
             </div>
             <div class="col-md-4">
-                <h4 class="about-origin">COMMUNICATION</h4>
-                  <p><small>「開発エンジニアを目指す仲間と話をしてみたいな...」</small></p>
-                  <p>「いいね！」「コメント」「返信」で<br>
-                    横の繋がりを作るきっかけになるかも！
-                  </p>
-                  <p>マナーを守り、<br>
-                  "気軽に"コミュニケーションをとりましょう！</p>
+              <h4 class="about-origin">COMMUNICATION</h4>
+                <p><small>「開発エンジニアを目指す仲間と話をしてみたいな...」</small></p>
+                <p>「いいね！」「コメント」「返信」で<br>
+                  横の繋がりを作るきっかけになるかも！
+                </p>
+                <p>マナーを守り、<br>
+                "気軽に"コミュニケーションをとりましょう！</p>
             </div>
           </div>
         </div>
@@ -55,54 +55,70 @@
     <div class="about-title">
       <h2>E.G.C.の使い方</h2>
     </div>
-      <div class="about-centence">
-        <div class="about-subtitle">
-          <h4>1. 作品を見てみよう</h4>
-        </div>
-        <div class="about-body">
-          <p>みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
-            インスピレーションのきっかけになることも。
-          </p>
-          <p><small>＊ ログインしていない場合は、作品一覧の閲覧のみご利用が可能です
-          </small></p>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>1. 作品を閲覧する</h4>
+            </div>
+            <div class="about-body">
+              <p>みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
+                インスピレーションのきっかけになることも。
+              </p>
+              <p><small>＊ ログインしていない場合は、作品一覧の閲覧のみご利用が可能です
+              </small></p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="about-centence">
-        <div class="about-subtitle">
-          <h4>2. 作品を投稿する</h4>
+      <div class="row">
+        <div class="col-md-6 offset-md-6">
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>2. 作品を投稿する</h4>
+              </div>
+              <div class="about-body">
+                <p>E.G.C.アカウントを作成し、作品について自由にアピール！<br>
+                  背景や思い、拘り等を投稿し、作品とあなたのことを知ってもらいましょう！！
+                </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>3. 作品に反応する</h4>
+            </div>
+            <div class="about-body">
+              <p>「いいね」をしましょう！<br>
+                「いいね!」がモチベーションアップに繋がります。<br>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-6">
+        <div class="about-centence">
+          <div class="about-subtitle">
+            <h4>4. 作品を通して繋がる</h4>
           </div>
           <div class="about-body">
-            <p>E.G.C.アカウントを作成し、作品について自由にアピール！<br>
-              背景や思い、拘り等を投稿し、作品とあなたのことを知ってもらいましょう！！
+            <p>気軽に質問・コメント・感想 等を送りましょう！<br>
+              <small>
+                ＊コメントや返信があった際は、「コメントは投稿者へ」
+                「返信はコメントをした人へ」メールで通知されます。
+              </small>
             </p>
+          </div>
         </div>
       </div>
-      <div class="about-centence">
-        <div class="about-subtitle">
-          <h4>3. 作品に反応する</h4>
-        </div>
-        <div class="about-body">
-          <p>「いいね」をしましょう！<br>
-            「いいね!」がモチベーションアップに繋がります。<br>
-          </p>
-        </div>
-      </div>
-      <div class="about-centence">
-        <div class="about-subtitle">
-          <h4>4. 作品を通して繋がろう</h4>
-        </div>
-        <div class="about-body">
-          <p>気軽に質問・コメント・感想 等を送りましょう！<br>
-            <small>
-              ＊コメントや返信があった際は、「コメントは投稿者へ」
-              「返信はコメントをした人へ」メールで通知されます。
-            </small>
-          </p>
-        </div>
-      </div>
+    </div>
 
     <div class="row">
-      <div class="col-md text-center">
+      <div class="col-md-4 text-center">
         <%= link_to '作品を見てみる！！', posts_path, class: "btn btn-info btn-lg" %>
       </div>
     </div>
