--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,6 @@
 <div class ="main-visual">
   <div class ="main-visual-text">
     <div class="main-visual-centence">
-        <p>"ポートフォリオ"作成してみたけど、<br>
-        作品が眠ったまま...<br>
-        公開できるようなレベルじゃないし...<br>
-        作成しようと思ってはいるけどイメージが湧かない...
-        </p>
-        <h5>でも大丈夫!!</h5>
       <div class="main-visual-headline">
         <h2>ポートフォリオを<br>
           作成したい・作成した なら<br>
@@ -14,10 +8,9 @@
       </div>
       <div class="main-centense">
         <p>
-          ポートフォリオの投稿・閲覧<br>
-          同じ志を持つ人と繋がることができる場です<br>
-          モチベーションUPや自作品のインスピレーション等、<br>
-          あなたの成長のきっかけに！
+          「作品をこのまま眠らせたくない」そんな思いはありませんか？
+          E.G.C.はポートフォリオの投稿・閲覧から、<br>
+          同じ志を持つ人と繋がることができる場です！<br>
         </p>
 
         <% unless user_signed_in? %>
