--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
       <footer>
         <div class="footer-contence">お問い合わせ先：xxxxxx＠xxxx.com</div>
         <div class="copyright">
-            Copyright © E.G.C. Inc. All Rights Reserved.
+            Copyright © 2021 E.G.C. Inc. All Rights Reserved.
         </div>
       </footer>
     </div>
