[Fix]view:about:button

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -53,73 +53,65 @@
     </div>
 
     <div class="about-title">
-      <h2>E.G.C.の使い方</h2>
-    </div>
       <div class="row">
-        <div class="col-md-6">
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>1. 作品を閲覧する</h4>
-            </div>
-            <div class="about-body">
-              <p>みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
-                インスピレーションのきっかけになることも。
-              </p>
-              <p><small>＊ ログインしていない場合は、作品一覧の閲覧のみご利用が可能です
-              </small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 offset-md-6">
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>2. 作品を投稿する</h4>
-              </div>
-              <div class="about-body">
-                <p>E.G.C.アカウントを作成し、作品について自由にアピール！<br>
-                  背景や思い、拘り等を投稿し、作品とあなたのことを知ってもらいましょう！！
-                </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>3. 作品に反応する</h4>
-            </div>
-            <div class="about-body">
-              <p>「いいね」をしましょう！<br>
-                「いいね!」がモチベーションアップに繋がります。<br>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <div class="row">
-      <div class="col-md-6 offset-md-6">
-        <div class="about-centence">
+        <div class="col-md-4 offset-md-2 about-centence">
           <div class="about-subtitle">
-            <h4>4. 作品を通して繋がる</h4>
+            <h5>1. 作品を閲覧する</h5>
           </div>
-          <div class="about-body">
-            <p>気軽に質問・コメント・感想 等を送りましょう！<br>
-              <small>
+          <div class="about-text">
+            <p>みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
+              インスピレーションのきっかけになることも。
+            </p>
+            <p><small>＊ ログインしていない場合は、作品一覧の閲覧のみご利用が可能です
+            </small></p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 offset-md-6 about-centence">
+          <div class="about-subtitle">
+            <h5>2. 作品を投稿する</h5>
+          </div>
+          <div class="about-text">
+            <p>E.G.C.アカウントを作成し、作品について自由にアピール！<br>
+              背景や思い、拘り等を投稿し、作品とあなたのことを知ってもらいましょう！！
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 offset-md-2 about-centence">
+          <div class="about-subtitle">
+            <h5>3. 作品に反応する</h5>
+          </div>
+          <div class="about-text">
+            <p>「いいね」をしましょう！<br>
+              「いいね!」がモチベーションアップに繋がります。
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 offset-md-6 about-centence">
+          <div class="about-subtitle">
+            <h5>4. 作品を通して繋がる</h5>
+          </div>
+          <div class="about-text">
+            <p>気軽に質問・コメント・感想 等を送りましょう！</p>
+              <p>
+                <small>
                 ＊コメントや返信があった際は、「コメントは投稿者へ」
                 「返信はコメントをした人へ」メールで通知されます。
-              </small>
-            </p>
+                </small>
+              </p>
           </div>
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-4 text-center">
-        <%= link_to '作品を見てみる！！', posts_path, class: "btn btn-info btn-lg" %>
+      <div class="col-md-4 offset-md-4 text-center">
+        <%= link_to '作品を見てみる！！', posts_path, class: "button" %>
       </div>
     </div>
 
