--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -31,24 +31,26 @@
 
 .about-main-title {
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 25px;
 	text-align: center;
 }
 
 .about-title {
-	color: #1ed7f5;
-	margin-top: 15px;
-	margin-bottom: 5px;
-	text-align: center;
+	margin-top: 150px;
+	margin-bottom: 50px;
 }
 
 .about-title-body {
-	padding-bottom: 5px;
+	margin-top: 10px;
+	padding-top: 10px;
+	padding-bottom: 50px;
 	text-align: center;
 }
 
 .about-origin-title {
-	padding-bottom: 5px;
+	margin-top: 100px;
+	padding-top: 20px;
+	padding-bottom: 15px;
 	text-align: center;
 }
 
@@ -61,19 +63,33 @@
 .about-subtitle {
 	color: #1ed7f5;
 	padding-bottom: 10px;
-	text-align: center;
 }
 
 .about-centence {
-	padding: 5px;
-	margin: 10px;
-	text-align: center;
+	height: 200px;
+  padding: 15px;
+  border: 1px solid #e7e7e7;
 }
 
 .about-body {
 	text-align: center;
 }
 
+.button {
+  display: inline-block;
+  margin-top: 2px;
+  padding: 7px 20px;
+  border-radius: 4px;
+  border-style: none;
+  color: #fff;
+  background-image: linear-gradient(#17a2b8 0%, #ffd900 100%);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #17a2b8;
+}
 
-
-
+.button:hover {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: none;
+}
