--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -111,7 +111,7 @@
 
     <div class="row">
       <div class="col-md-4 offset-md-4 text-center">
-        <%= link_to '作品を見てみる！！', posts_path, class: "button" %>
+        <%= link_to '作品を見てみる！！', posts_path, class: "button-index" %>
       </div>
     </div>
 
